# backend

./: README.md
project/: pyproject.toml
project/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
project/accounts/migrations/: 0001_initial.py  0002_recommendation_user_recommended_targets_and_more.py
project/config/: settings.py  urls.py
project/profiles/: admin.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
project/profiles/migrations/: 0001_initial.py  0002_alter_ownerprofile_off_peak_time_and_more.py  0002_remove_studentgroupprofile_partnership_record_and_more.py  0003_studentprofile_name.py  0004_alter_ownerprofile_off_peak_time_and_more.py  0005_remove_ownerprofile_partnership_type.py  0006_studentgroupprofile_department_and_more.py  0007_ownerprofile_contact_studentgroupprofile_contact_and_more.py  0008_alter_ownerprofile_available_service_and_more.py  0009_remove_ownerprofile_available_service_and_more.py  0010_remove_ownerprofile_partnership_goal_and_more.py  0011_ownerprofile_business_type_other_and_more.py
project/proposals/: admin.py  models.py  serializers.py  urls.py  views.py
project/proposals/migrations/: 0001_initial.py  0002_remove_proposal_max_redemptions_per_user_and_more.py  0003_remove_proposal_partnership_purpose.py  0004_proposal_partnership_type.py  0005_remove_proposal_apply_target_other_and_more.py  0006_alter_proposalstatus_status.py  0007_alter_proposal_apply_target.py
project/proposals/services/: get_info.py  make_prompt.py
(+1 files in other folders)
