[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "limdaecheol",email = "eocjf852963@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "sshtunnel (>=0.4.0,<0.5.0)",
    "django-storages (>=1.14.6,<2.0.0)",
    "drf-yasg (>=1.21.10,<2.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "boto3 (>=1.40.6,<2.0.0)"
]

[tool.poetry]
packages = [{include = "project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
